--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "illuminate/pipeline": "^9.0",
+        "illuminate/pipeline": "^8.0 || ^9.0",
         "pestphp/pest": "^1.0"
     },
     "autoload": {
