--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,11 @@
 {
     "name": "rieves/pest-dataset-expectations",
     "description": "Allows expectations to be set in datasets",
-    "keywords": [
-        "php",
-        "pest",
-        "unit",
-        "test",
-        "testing"
-    ],
+    "keywords": ["php", "pest", "unit", "test", "testing"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "illuminate/pipeline": "^8.0 || ^9.0",
+        "illuminate/pipeline": "^8.0|^9.0",
         "pestphp/pest": "^1.0"
     },
     "autoload": {
@@ -22,7 +16,6 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true,
-        "preferred-install": "dist"
+        "sort-packages": true
     }
 }
